--- a/expanding cards/index.html
+++ b/expanding cards/index.html
@@ -3,9 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylescheet" href="sctyl.css">
+    <title>Expanding Cards</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="panel active"
+         style="background-image:url('https://images.unsplash.com/photo-1530103043960-ef38714abb15?q=80&w=2069&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') ">
+            <h3>Explore the world</h3>
+         </div>
+         <div class="panel active"
+         style="background-image:url('https://images.unsplash.com/photo-1523510468197-455cc987be86?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') ">
+            <h3>Beautiful Sunsets</h3>
+         </div>
+         <div class="panel active"
+         style="background-image:url('https://images.unsplash.com/photo-1491466424936-e304919aada7?q=80&w=2069&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') ">
+            <h3>Nights</h3>
+         </div>
+         <div class="panel active"
+         style="background-image:url('https://images.unsplash.com/photo-1689348110973-292ffb4b4021?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') ">
+            <h3>The Ocean</h3>
+         </div>
+         <div class="panel active"
+         style="background-image:url('https://plus.unsplash.com/premium_photo-1661962656908-24102eafa8d4?q=80&w=1790&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') ">
+            <h3>The Wild</h3>
+         </div>
+         <div class="panel active"
+         style="background-image:url('https://images.unsplash.com/photo-1448301858776-07f780e9c9da?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') ">
+            <h3>The Buildings</h3>
+         </div>
+         <div class="panel active"
+         style="background-image:url('https://images.unsplash.com/photo-1507608869274-d3177c8bb4c7?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') ">
+            <h3>True beauty</h3>
+         </div>
+
+
+
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
