--- a/expanding cards/index.html
+++ b/expanding cards/index.html
@@ -18,7 +18,7 @@
          </div>
          <div class="panel"
          style="background-image:url('https://images.unsplash.com/photo-1491466424936-e304919aada7?q=80&w=2069&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') ">
-            <h3>Nights</h3>
+            <h3> Magical Nights</h3>
          </div>
          <div class="panel"
          style="background-image:url('https://images.unsplash.com/photo-1689348110973-292ffb4b4021?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') ">
